# Endfield-Network

./: README.md
crates/binary-parser/: Cargo.toml
crates/binary-parser/src/: common.rs  elf.rs  error.rs  lib.rs  macho.rs  pe.rs
crates/core/: Cargo.toml
crates/core/src/: config.rs  error.rs  events.rs  lib.rs  types.rs
crates/crypto/: Cargo.toml
crates/crypto/src/: encryption.rs  hashing.rs  integrity.rs  lib.rs  secure.rs
crates/gui/: Cargo.toml
crates/gui/src/: lib.rs  state.rs  theme.rs
crates/gui/src/views/: dashboard.rs  mod.rs
crates/gui/src/widgets/: code_view.rs  data_table.rs  hex_view.rs  mod.rs  notification.rs  search_bar.rs  stat_card.rs
crates/il2cpp/: Cargo.toml
crates/il2cpp/src/: dumper.rs  lib.rs  metadata.rs  output.rs  search.rs  types.rs
crates/network/: Cargo.toml
crates/network/src/: analyzer.rs  capture.rs  decoder.rs  filter.rs  lib.rs  packet.rs
