[package]
name = "endfield-gui"
version = "0.1.0"
edition = "2021"
description = "Modern GUI for Endfield Tracker using egui"

[dependencies]
endfield-core = { path = "../core" }
endfield-binary-parser = { path = "../binary-parser" }
endfield-il2cpp = { path = "../il2cpp" }
endfield-network = { path = "../network" }
endfield-crypto = { path = "../crypto" }

# GUI framework
eframe = { version = "0.25", features = ["persistence"] }
egui = "0.25"
egui_extras = { version = "0.25", features = ["all_loaders", "syntect"] }
egui_plot = "0.25"

# Async
tokio = { version = "1.35", features = ["full"] }
poll-promise = { version = "0.3", features = ["tokio"] }

# Utilities
thiserror = "1.0"
anyhow = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tracing = "0.1"
chrono = { version = "0.4", features = ["serde"] }
rfd = "0.14"
image = "0.24"
open = "5.0"
directories = "5.0"

# Syntax highlighting
syntect = "5.1"
