[package]
name = "endfield-il2cpp"
version = "0.1.0"
edition = "2021"
description = "IL2CPP metadata parser and dumper"

[dependencies]
endfield-core = { path = "../core" }
endfield-binary-parser = { path = "../binary-parser" }
thiserror = "1.0"
anyhow = "1.0"
byteorder = "1.5"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tracing = "0.1"
rayon = "1.8"
indexmap = { version = "2.1", features = ["serde"] }
