[package]
name = "endfield-network"
version = "0.1.0"
edition = "2021"
description = "Network packet capture and protocol analysis for Endfield"

[dependencies]
endfield-core = { path = "../core" }
endfield-crypto = { path = "../crypto" }
thiserror = "1.0"
anyhow = "1.0"
tokio = { version = "1.35", features = ["full"] }
pcap = "1.1"
pnet = "0.34"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tracing = "0.1"
bytes = "1.5"
dashmap = "5.5"
crossbeam-channel = "0.5"
